# PhantomDrop

./: .dockerignore  .env.example  .gitignore  Cloudflare接入自动化说明.md  Dockerfile  README.md  VERIFY.md  docker-compose.yml  docker-entrypoint.sh  initialize-cloudflare-automation.ps1  previous_changelog.txt  rebuild.ps1  setup-cloudflare-mail.ps1  启动开发环境.ps1  开发规范.md  更新日志.md  项目全景技术审计与评估报告.md  项目实施方案.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/console/: app.js  index.html  style.css
core/migrations/: 202605100001_initial_schema.sql  202605110001_oauth_account_fields.sql  202605180001_gateway_high_availability_fields.sql  202607190001_performance_and_integrity.sql
core/src/: chromium.rs  cloudflare_automation.rs  config.rs  db.rs  exporter.rs  main.rs  parser.rs  routes.rs  sqlx.rs  stream.rs  tunnel.rs  uploader.rs  utils.rs  workflow.rs
core/src/grok/: register.rs
core/src/openai/: browser_driver.rs  checker.rs  constants.rs  gateway.rs  impersonator.rs  mod.rs  oauth.rs  proxy_checker.rs  register.rs  sentinel.rs  sms.rs  uploader.rs
core/src/register/: mod.rs
core/src/routes/: emails.rs
core/src/scratch/: test_type.rs
docker/: Dockerfile.core  Dockerfile.web  README.md  docker-compose.yml
docker/nginx/: default.conf
docs/: Grok自动注册说明.md  OAuth认证提取与导出说明.md  OpenAI 自动化注册功能 - 实施计划.md  OpenAI自动化注册集成方案_最终版.md  implementation_plan.md  implementation_plan1.md  implementation_plan2.md  scratchpad_apnkrm58.md  scratchpad_iuufbosy.md  scratchpad_ngkrjih1.md  scratchpad_osanl0si.md  scratchpad_wszqgbym.md  最终整合方案_OpenAI自动化注册.md  最终整合方案_通用注册中心.md
network/: package-lock.json  package.json  tsconfig.json  wrangler.toml
network/src/: index.ts
tools/release-tool/: Cargo.toml
tools/release-tool/src/: main.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/cmd/: Cmd.tsx
web/src/grid/: Grid.tsx
web/src/lib/: api.ts  utils.ts
web/src/terminal/: Terminal.tsx
web/src/ui/: ConfirmModal.tsx  ErrorBoundary.tsx  PageHeader.tsx  PromptModal.tsx  ProxyModal.tsx  Sidebar.tsx  SnapshotModal.tsx  StatusBadge.tsx  Toast.tsx  fields.tsx  useClipboard.ts
web/src/views/: AccountListView.tsx  AutomationHubView.tsx  AutomationView.tsx  DashboardView.tsx  EmailListView.tsx  InboxCenterView.tsx  LogsView.tsx  RegistrationView.tsx  SettingsView.tsx  SystemSettingsView.tsx  TunnelView.tsx
