[package]
name = "core"
version = "0.0.14"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio-stream = "0.1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
rand = "0.8"
headless_chrome = { version = "1.0", features = ["fetch"] }
rquest = "5.1.0"
anyhow = "1.0"
