[package]
name = "core"
version = "0.0.34"
edition = "2024"
rust-version = "1.88"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx-core = { version = "=0.8.6", features = ["_rt-tokio", "_tls-rustls-ring-webpki", "migrate"] }
sqlx-sqlite = { version = "=0.8.6", features = ["bundled", "migrate"] }
sqlx-macros = { version = "=0.8.6", features = ["derive", "migrate", "sqlite", "_rt-tokio", "_tls-rustls-ring-webpki"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tokio-stream = "0.1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "socks", "multipart", "stream"] }
rand = "0.8"
headless_chrome = { version = "1.0", features = ["fetch"] }
anyhow = "1.0"
url = "2.5.8"
base64 = "0.22.1"
argon2 = "0.5.3"

[profile.release]
opt-level = "s"      # 优化代码大小，减少内存占用并缩短编译时间
codegen-units = 1    # 减少并行编译单元，显著降低编译期间的内存消耗
lto = "thin"         # 使用轻量级 LTO，减少链接时的内存与时间
panic = "abort"      # panic 时直接中止，减小体积与开销
